# evonith_datafeed_ref

./: .env  Dockerfile  README.md  app.log.1  app.log.2  app.log.3  pyproject.toml  requirements.txt
.github/workflows/: dev_evonith-datafeed-webapp.yml
data/: data.csv
logs/: app.log.1  app.log.2  app.log.3
src/: app.py
src/.github/workflows/: evonith_datafeed_azuredeploy.yaml
src/config/: loader.py  logger_setting.yaml  setting.yaml
src/data/: downloader.py  transformer.py  writer.py
src/utils/: helper_functions_downloader  helper_functions_downloader.py  helper_functions_pipeline.py  logger.py
src/workflows/: pipeline.py
tests/: test_downloader.py
